--- a/index.html
+++ b/index.html
@@ -2,9 +2,51 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>Women in Pharma</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!-- Primary SEO -->
+<title>Women in Pharm | Women in Pharmacy & Public Health Leadership</title>
+
+<meta name="description" content="Women in Pharm is a platform dedicated to empowering women in pharmacy education, research, leadership, and public health. Join our community shaping the future of healthcare.">
+
+<meta name="keywords" content="Women in Pharm, Women in Pharmacy, Women in Pharma, Public Health, Pharmacy Education, Women in Healthcare Leadership">
+
+<meta name="author" content="Women in Pharm">
+
+<meta name="robots" content="index, follow">
+
+<link rel="canonical" href="https://womeninpharm.com/">
+
+<!-- Open Graph (Social Sharing) -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Women in Pharm – Education, Research & Public Health">
+<meta property="og:description" content="Empowering women in pharmacy through education, leadership, research, and public health initiatives.">
+<meta property="og:url" content="https://womeninpharm.com/">
+<meta property="og:image" content="https://womeninpharm.com/public/images/homepagepic.png">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Women in Pharm – Women in Pharmacy & Public Health">
+<meta name="twitter:description" content="Empowering women in pharmacy education, leadership, research, and public health.">
+<meta name="twitter:image" content="https://womeninpharm.com/public/images/homepagepic.png">
+
+<!-- Structured Data for Google -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Women in Pharm",
+  "url": "https://womeninpharm.com",
+  "logo": "https://womeninpharm.com/public/images/logo.png",
+  "description": "Women in Pharm is a platform supporting women in pharmacy education, research, leadership, and public health initiatives.",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "contactType": "General Inquiry",
+    "email": "neelams.singla@gmail.com",
+    "telephone": "+919910944889"
+  }
+}
+</script>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
